test/files/neg/migration28.check
migration28.scala:5: error: method ++= in class Stack has changed semantics:
Stack ++= now pushes arguments on the stack from left to right.
  s ++= List(1,2,3)
  ^
migration28.scala:7: error: method foreach in class Stack has changed semantics:
Stack iterator and foreach now traverse in FIFO order.
  s foreach (_ => ())
  ^
two errors found
